front-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: clinical-workbench-lite-service
  labels:
    app: clinical-workbench-lite
spec:
  type: LoadBalancer
  selector:
    app: clinical-workbench-lite
  ports:
    - name: 8080-tcp
      port: 80
      protocol: TCP
      targetPort: 8080
